terraform-advance-vpc/security-group.tf
resource "aws_security_group" "nginx" {

  name = "${var.project_name}-nginx-sg"

  vpc_id = aws_vpc.main.id

  ingress {

    from_port = 80
    to_port   = 80
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {

    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {

    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-nginx-sg"
    }
  )

}
